--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0"
+    "angular-touch": "^1.4.0",
+    "angular-audio": "~1.7.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
