--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "angular-audio": "~1.7.1"
+    "angular-audio": "~1.7.1",
+    "grunt-contrib-imagemin": "1.0.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
